--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "@pcm9881/material-ui-pickers"
   "version": "4.0.0-alpha.11",
   "private": true,
   "description": "Material-ui pickers root package",
@@ -30,7 +31,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mui-org/material-ui-pickers.git"
+    "url": "git+https://github.com/pcm9881/material-ui-pickers.git"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.9.6",
