--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pcm9881/material-ui-pickers"
+  "name": "@pcm9881/material-ui-pickers",
   "version": "4.0.0-alpha.11",
   "private": true,
   "description": "Material-ui pickers root package",
