--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pcm9881/material-ui-pickers",
   "version": "4.0.0-alpha.11",
-  "private": true,
+  "private": false,
   "description": "Material-ui pickers root package",
   "main": "index.js",
   "directories": {
